# routes/api_v1.php
@@ -9,10 +9,6 @@ Route::post('/login', [AuthController::class, 'login']);
 Route::post('/register', [AuthController::class, 'register']);
 Route::group(['middleware' => 'auth:sanctum'], function () {
     Route::get('/logout', [AuthController::class, 'logout']);
-    Route::apiResources(
-        [
-            'products' => ProductController::class,
-            'orders' => OrderController::class,
-        ]
-    );
+    Route::apiResource('products', ProductController::class);
+    Route::apiResource('orders', OrderController::class)->only(['store', 'show']);
 });
